--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kjetland.dropwizard</groupId>
-    <artifactId>dropwizard-activemq</artifactId>
-    <version>0.3.9-SNAPSHOT</version>
+    <artifactId>mf-dropwizard-activemq</artifactId>
+    <version>0.1</version>
 
     <properties>
         <dropwizard.version>0.7.0</dropwizard.version>
